@@ -1,5 +1,10 @@
 2004-06-01  Damien Sandras  <dsandras@gnome.org>
 
+	* src/endpoint.cpp: Fixed GetAvailableCodecs with latest 
+	OpenH323 version.
+
+2004-06-01  Damien Sandras  <dsandras@gnome.org>
+
 	* lib/contacts/gm_contacts-remote.cpp: do not try to add invalid
 	remote hosts to the GUI.
 
